# ashigaru

./: .gitignore  CMakeLists.txt  README  ashigaru.kdev4  bench.txt  class_diagram.xmi  geometry.h  main.cpp  shader_program.cpp  shader_program.h  tiled_view.cpp  tiled_view.h  util.cpp  util.h
Ashigaru/: Ashigaru.sln
Ashigaru/Ashigaru/: Ashigaru.vcxproj  Ashigaru.vcxproj.filters  packages.config
include/: geometry.h  opengl_utils.h  render_action.h  render_server.h  shader_program.h  tiled_view.h  triple_action.h  util.h  vertex_db.h
models/: crystal.stl
shaders/: frag.glsl  height_frag.glsl  height_geom.glsl  passthrough.vertex.glsl  take_min.glsl  vertex.glsl
src/: main.cpp  opengl_utils.cpp  render_action.cpp  render_server.cpp  shader_program.cpp  tiled_view.cpp  triple_action.cpp
